--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,9 @@
                 <a class="btn btn-success" href="/login">Войти</a>
             </p>
         {% endif %}
+        {% if current_user.is_authenticated %}
+            <a href="news" class="btn btn-secondary">Добавить новость</a>
+        {% endif %}
     </nav>
 </header>
 <!-- Begin page content -->
